// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node api accepts buffers as input 1`] = `
Object {
  "content": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" fill=\\"red\\" stroke=\\"#000\\" stroke-width=\\"3\\"/></svg>",
  "metadata": Object {
    "dataURI": "data:image/svg+xml,dataURI",
    "dataURIBase64": "data:image/svg+xml;base64,dataURIBase64==",
    "filename": "-",
    "height": 188,
    "mimeType": "unknown",
    "originalHeight": 640,
    "originalWidth": 1024,
    "palette": Object {
      "DarkMuted": Object {
        "population": 17355,
        "rgb": Array [
          104,
          78,
          54,
        ],
      },
      "DarkVibrant": Object {
        "population": 106,
        "rgb": Array [
          190,
          79,
          12,
        ],
      },
      "LightMuted": Object {
        "population": 51474,
        "rgb": Array [
          208,
          201,
          182,
        ],
      },
      "LightVibrant": Object {
        "population": 15729,
        "rgb": Array [
          242,
          177,
          122,
        ],
      },
      "Muted": Object {
        "population": 32611,
        "rgb": Array [
          102,
          146,
          160,
        ],
      },
      "Vibrant": Object {
        "population": 7271,
        "rgb": Array [
          228,
          139,
          55,
        ],
      },
    },
    "type": "unknown",
    "width": 300,
  },
}
`;

exports[`node api output outputs to file path 1`] = `
Object {
  "content": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" fill=\\"red\\" stroke=\\"#000\\" stroke-width=\\"3\\"/></svg>",
  "metadata": Object {
    "dataURI": "data:image/svg+xml,dataURI",
    "dataURIBase64": "data:image/svg+xml;base64,dataURIBase64==",
    "filename": "beach",
    "height": 188,
    "mimeType": "image/jpeg",
    "originalHeight": 640,
    "originalWidth": 1024,
    "palette": Object {
      "DarkMuted": Object {
        "population": 17355,
        "rgb": Array [
          104,
          78,
          54,
        ],
      },
      "DarkVibrant": Object {
        "population": 106,
        "rgb": Array [
          190,
          79,
          12,
        ],
      },
      "LightMuted": Object {
        "population": 51474,
        "rgb": Array [
          208,
          201,
          182,
        ],
      },
      "LightVibrant": Object {
        "population": 15729,
        "rgb": Array [
          242,
          177,
          122,
        ],
      },
      "Muted": Object {
        "population": 32611,
        "rgb": Array [
          102,
          146,
          160,
        ],
      },
      "Vibrant": Object {
        "population": 7271,
        "rgb": Array [
          228,
          139,
          55,
        ],
      },
    },
    "type": "unknown",
    "width": 300,
  },
}
`;

exports[`node api resolves valid input path 1`] = `
Object {
  "content": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" fill=\\"red\\" stroke=\\"#000\\" stroke-width=\\"3\\"/></svg>",
  "metadata": Object {
    "dataURI": "data:image/svg+xml,dataURI",
    "dataURIBase64": "data:image/svg+xml;base64,dataURIBase64==",
    "filename": "beach",
    "height": 188,
    "mimeType": "image/jpeg",
    "originalHeight": 640,
    "originalWidth": 1024,
    "palette": Object {
      "DarkMuted": Object {
        "population": 17355,
        "rgb": Array [
          104,
          78,
          54,
        ],
      },
      "DarkVibrant": Object {
        "population": 106,
        "rgb": Array [
          190,
          79,
          12,
        ],
      },
      "LightMuted": Object {
        "population": 51474,
        "rgb": Array [
          208,
          201,
          182,
        ],
      },
      "LightVibrant": Object {
        "population": 15729,
        "rgb": Array [
          242,
          177,
          122,
        ],
      },
      "Muted": Object {
        "population": 32611,
        "rgb": Array [
          102,
          146,
          160,
        ],
      },
      "Vibrant": Object {
        "population": 7271,
        "rgb": Array [
          228,
          139,
          55,
        ],
      },
    },
    "type": "unknown",
    "width": 300,
  },
}
`;

exports[`node api throws nicely when plugin not found 1`] = `
"Unable to load plugin \\"sqip-plugin-i-dont-exist\\". Try installing it via:

 npm install sqip-plugin-i-dont-exist"
`;

exports[`node api throws when empty input is passed 1`] = `"Please provide an input image, e.g. sqip({ input: \\"input.jpg\\" })"`;

exports[`node api throws when invalid input path is passed 1`] = `
"Unable to find any files via /this/file/does/not/exist.jpg. Make sure the file exists.

If you are using globbing patterns, the following features are supported:

https://github.com/micromatch/micromatch#matching-features"
`;
